--- a/application/admin/view/index/set.html
+++ b/application/admin/view/index/set.html
@@ -3,7 +3,7 @@
     <section class="" style="margin: 10px auto;width: 96%;">
         <div class="row">
             <div class="col-lg-12">
-                <h3 class="page-header" style="font-size: 20px;"><i class="fa fa-laptop"></i>我的应用/{$app.app_key}</h3>
+                <h3 class="page-header" style="font-size: 20px;"><i class="fa fa-laptop"></i>我的应用1/{$app.app_key}</h3>
                 <ol class="breadcrumb">
                     <li><i class="fa fa-laptop"></i><a href="{:url('admin/index/index')}">我的应用</a></li>
                     <li>{$app.app_key}</li>
